-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P2
-
Affects Version/s: 9
-
Component/s: hotspot
-
Environment:
Host: ********, Solaris 11 (5.11)
Options: -server -Xmixed -XX:MaxRAMFraction=8 -XX:+CreateCoredumpOnCrash -XX:ReservedCodeCacheSize=256M
-
b103
-
Verified
[Launcher]:/bpool/local/aurora/sandbox/results/workDir/sun/management/jmxremote/bootstrap/CustomLauncherTest/launcher /export/local/aurora/CommonData/JDK_DIR/lib/amd64/server/libjvm.so /bpool/local/aurora/sandbox/results/workDir/classes/15/sun/management/jmxremote/bootstrap:/bpool/local/aurora/sandbox/results/workDir/classes/15/lib/testlibrary TestApplication
[Launcher] # To suppress the following error report, specify this argument
[Launcher] # after -XX: or in .hotspotrc: SuppressErrorAt=/os.cpp:1399
[Launcher] #
[Launcher] # A fatal error has been detected by the Java Runtime Environment:
[Launcher] #
[Launcher] # Internal Error (/opt/jprt/T/P1/220952.iklam/s/hotspot/src/share/vm/runtime/os.cpp:1399), pid=6977, tid=1
[Launcher] # assert((thread->stack_base() - thread->stack_size()) + (JavaThread::stack_guard_zone_size() + JavaThread::stack_shadow_zone_size() + framesize_in_bytes) == ((JavaThread*)thread)->stack_overflow_limit() + framesize_in_bytes) failed: sanity
[Launcher] #
[Launcher] # JRE version: (9.0) (build )
[Launcher] # Java VM: Java HotSpot(TM) 64-Bit Server VM (9-internal+0-2015-12-21-220952.iklam.jdk9rt, mixed mode, tiered, compressed oops, g1 gc, solaris-amd64)
[Launcher] # Core dump will be written. Default location: /bpool/local/aurora/sandbox/results/workDir/sun/management/jmxremote/bootstrap/CustomLauncherTest/core or core.6977
[Launcher] #
[Launcher] # An error report file with more information is saved as:
[Launcher] # /bpool/local/aurora/sandbox/results/workDir/sun/management/jmxremote/bootstrap/CustomLauncherTest/hs_err_pid6977.log
[Launcher] #
[Launcher] # If you would like to submit a bug report, please visit:
[Launcher] # http://bugreport.java.com/bugreport/crash.jsp
[Launcher] #
[Launcher] Current thread is 1
[Launcher] Dumping core ...
[Launcher] # To suppress the following error report, specify this argument
[Launcher] # after -XX: or in .hotspotrc: SuppressErrorAt=/os.cpp:1399
[Launcher] #
[Launcher] # A fatal error has been detected by the Java Runtime Environment:
[Launcher] #
[Launcher] # Internal Error (/opt/jprt/T/P1/220952.iklam/s/hotspot/src/share/vm/runtime/os.cpp:1399), pid=6977, tid=1
[Launcher] # assert((thread->stack_base() - thread->stack_size()) + (JavaThread::stack_guard_zone_size() + JavaThread::stack_shadow_zone_size() + framesize_in_bytes) == ((JavaThread*)thread)->stack_overflow_limit() + framesize_in_bytes) failed: sanity
[Launcher] #
[Launcher] # JRE version: (9.0) (build )
[Launcher] # Java VM: Java HotSpot(TM) 64-Bit Server VM (9-internal+0-2015-12-21-220952.iklam.jdk9rt, mixed mode, tiered, compressed oops, g1 gc, solaris-amd64)
[Launcher] # Core dump will be written. Default location: /bpool/local/aurora/sandbox/results/workDir/sun/management/jmxremote/bootstrap/CustomLauncherTest/core or core.6977
[Launcher] #
[Launcher] # An error report file with more information is saved as:
[Launcher] # /bpool/local/aurora/sandbox/results/workDir/sun/management/jmxremote/bootstrap/CustomLauncherTest/hs_err_pid6977.log
[Launcher] #
[Launcher] # If you would like to submit a bug report, please visit:
[Launcher] # http://bugreport.java.com/bugreport/crash.jsp
[Launcher] #
[Launcher] Current thread is 1
[Launcher] Dumping core ...