8146011: sun/management/jmxremote/bootstrap/CustomLauncherTest crash at assert(stack_size)

We were setting stack_overflow_limit before initialization completed which may change the stack base for some solaris systems with unlimited stack

Reviewed-by: goetz, hseigel, gthornbr